--- a/Programs.html
+++ b/Programs.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Logo.jpg">
 </head>
 <body>
-    <h1>PROGRAMS</h1>
+    <h1 style="text-align: center;">PROGRAMS</h1>
     <h3>Assess your abilities and categorize your skills according to your level of expertise, from novice to master,
         <br> to better understand your strengths and areas for growth.</h3>
     <hr>
