--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness</title>
+    <style>
+        #div{
+            width: 30%;
+            margin-left: 15%;      
+        }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Logo.jpg">
+    
 </head>
 <body>
-    <h1>AT HOME PHYSICAL FITNESS CLUB</h1>
-    <h2>(Home workout/Calisthenics)</h2>
+    <h1 style="text-align: center;">AT HOME PHYSICAL FITNESS CLUB</h1>
+    <h2 style="text-align: center;">(Home workout/Calisthenics)</h2>
     <hr>
     <br>
     <a href="Programs.html">Go To Programs</a>
@@ -15,7 +27,10 @@
         <br>the best version of yourself."</h3>
     <h3>“You don’t have access in the gym or you don’t have equipments? no problem! 
         <br>follow me and let’s start your home workout that doesn’t requires equipment.”</h3>
+    <div id="div"> 
         <img src="./Home workout.jpg" alt="Home workout (plank)">
+        
+    </div>   
         <br>
         <p>At home physical fitness club offer an incredibly convenient and effective way to achieve your fitness goals without 
             the need for a gym membership or elaborate equipment. By exercising at home, you can design a workout routine that 
@@ -45,5 +60,6 @@
             <li>Flexibility: The range of motion available at a joint or group of joints.</li>
             <li>Body Composition: The proportion of fat and lean mass in the body.</li>
         </ul>
+        <div id="div"><img src="pushup.jpg" alt="Home workout (push-up)"></div>
 </body>
 </html>
