--- a/Programs.html
+++ b/Programs.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1 style="text-align: center;">PROGRAMS</h1>
-    <h3>Assess your abilities and categorize your skills according to your level of expertise, from novice to master,
+    <h3 style="text-align: center;">Assess your abilities and categorize your skills according to your level of expertise, from novice to master,
         <br> to better understand your strengths and areas for growth.</h3>
     <hr>
     <img src="" alt="">
