--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     <h2 style="text-align: center;">(Home workout/Calisthenics)</h2>
     <hr>
     <br>
-    
-    >>><a href="Programs.html">Go To Programs</a>
+    <a href="Programs.html">
+    <button>Programs</button>
+    </a>
     
     <div class="a">
     <h3 >"Unlock your fitness potential at home where every workout brings you closer to 
