--- a/Expert.html
+++ b/Expert.html
@@ -9,10 +9,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
+    <style>
+        body{
+            background-image: url(ExpertBG.gif);
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        h1{
+            text-align: center;
+            font-size: 50px;
+            color: white;
+        }
+        ul{
+            color: white;
+        }
+        ol{
+            color: white;
+        }
+        button{
+            position: absolute;
+            left: 1450px;
+            font-size: 30px;
+        }
+        .tips{
+            position: absolute;
+            bottom: 150px;
+            left: 700px;
+            
+        }
+    </style>
 </head>
 <body>
-    <h2>Expert Home Workout Program</h2>
-    <p>An expert-level home workout program will focus on advanced strength, endurance, and agility training. It incorporates high-intensity intervals, complex 
+    <h1>Expert Home Workout Program</h1>
+    <p style="background-color: gray; color: white; text-align: center;">An expert-level home workout program will focus on advanced strength, endurance, and agility training. It incorporates high-intensity intervals, complex 
         movements, and challenging exercises to push your limits. This program assumes you have a high level of fitness and experience with a variety of exercises. 
         It also requires some equipment like dumbbells, a pull-up bar, and possibly resistance bands.</p>
         <a href="Programs.html">
@@ -106,7 +136,8 @@
             <li>Child’s Pose - 1 minute</li>
             <li>Cobra Stretch - 1 minute</li>
         </ol>
-        <h5>Tips:</h5>
+        <div class="tips">
+        <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
         <ul>
             <li><p>Intensity and Variation: Adjust weights, reps, and rest periods to match your individual fitness level and goals. Incorporate different variations to 
                 continuously challenge yourself.</p></li>
@@ -114,8 +145,9 @@
             <li><p>Progressive Overload: Gradually increase the intensity of your workouts by adding weight, reps, or sets as you progress.</p></li>
             <li><p>Recovery: Allow for adequate rest and recovery between workouts. Incorporate active recovery and flexibility work on off days.</p></li>
         </ul>
-        <p>This advanced program is designed to be intense and challenging, so listen to your body and make adjustments as needed. Aim to complete this routine 4-5 times a week,
+        <p style="color: rgba(255, 0, 0, 0.795);">This advanced program is designed to be intense and challenging, so listen to your body and make adjustments as needed. Aim to complete this routine 4-5 times a week,
            with at least one full rest day or light recovery activity.</p>
-           <hr>
+        </div>
+
 </body>
 </html>
