--- a/Intermediate.html
+++ b/Intermediate.html
@@ -9,10 +9,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
+    <style>
+        body{
+            background-image: url(Intermediate.gif);
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        h1{
+            text-align: center;
+            font-size: 50px;
+            color: white;
+        }
+        ul{
+            color: white;
+        }
+        ol{
+            color: white;
+        }
+        button{
+            position: absolute;
+            left: 1450px;
+            font-size: 30px;
+        }
+        .tips{
+            position: absolute;
+            bottom: 200px;
+            left: 800px;
+            
+        }
+    </style>
 </head>
+
 <body>
-    <h2>Intermediate Home Workout Program</h2>
-    <p>This program builds on basic exercises and incorporates more challenging movements to enhance strength, endurance, and flexibility. It requires minimal equipment, 
+    <h1>Intermediate Home Workout Program</h1>
+    <p style="background-color: gray; color: white; text-align: center;">This program builds on basic exercises and incorporates more challenging movements to enhance strength, endurance, and flexibility. It requires minimal equipment, 
         such as dumbbells or resistance bands, but can be adapted based on what you have available.</p>
         <a href="Programs.html">
             <button>Back</button>
@@ -88,14 +119,15 @@
             <li>Seated Hamstring Stretch - 1 minute per leg</li>
             <li>Chest Stretch - 1 minute (hands behind back, gently lift arms)</li>
         </ol>
-        <h5>Tips:</h5>
+        <div class="tips">
+        <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
         <ul>
             <li><p>Proper Form: Ensure proper technique to avoid injury and maximize effectiveness.</p></li>
             <li><p>Intensity: Adjust weights and reps as needed based on your fitness level and goals.</p></li>
             <li><p>Progression: Increase weights, reps, or sets as you get stronger.</p></li>
             <li><p>Recovery: Allow adequate rest and recovery between workouts to avoid overtraining.</p></li>
         </ul>
-        <p>This program can be done 3-4 times a week. Incorporate rest days or lighter activity (like walking or yoga) to allow your body to recover.</p>
-        <hr>
+        <p style="color: rgba(255, 0, 0, 0.795);">This program can be done 3-4 times a week. Incorporate rest days or lighter activity (like walking or yoga) to allow your body to recover.</p>
+    </div>
 </body>
 </html>
