--- a/Master.html
+++ b/Master.html
@@ -9,10 +9,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
+    <style>
+        body{
+            background-image: url(MasterBG.gif);
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        h1{
+            text-align: center;
+            font-size: 50px;
+            color: white;
+        }
+        ul{
+            color: white;
+        }
+        ol{
+            color: white;
+        }
+        button{
+            position: absolute;
+            left: 1450px;
+            font-size: 30px;
+        }
+        .tips{
+            position: absolute;
+            bottom: 100px;
+            left: 700px;
+            
+        }
+    </style>
 </head>
 <body>
-    <h2>Master-Level Home Workout Program</h2>
-        <p>A master-level home workout program is designed for individuals who have achieved a high level of fitness and are looking to maintain or further enhance their peak 
+    <h1>Master-Level Home Workout Program</h1>
+        <p style="background-color: gray; color: white; text-align: center;">A master-level home workout program is designed for individuals who have achieved a high level of fitness and are looking to maintain or further enhance their peak 
             physical condition. This program includes highly advanced exercises, incorporates multiple training modalities, and focuses on strength, power, endurance, and agility.
              It also assumes access to a range of equipment and a deep understanding of proper technique.</p>
              <a href="Programs.html">
@@ -118,7 +148,8 @@
                     <li>Glutes - 1 minute per side</li>
                 </ul>
              </ol>
-             <h5>Tips:</h5>
+             <div class="tips">
+             <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
              <ul>
                 <li><p>Technical Mastery: Ensure you maintain impeccable form to maximize benefits and avoid injury. Advanced exercises often require precise technique.</p></li>
                 <li><p>Progressive Overload: Continually challenge yourself by increasing weights, adjusting exercise variations, or adding more complex movements.</p></li>
@@ -126,7 +157,8 @@
                 <li><p>Periodization: To avoid plateaus and overtraining, consider varying your workout routine periodically or integrating different training phases 
                     (e.g., strength, hypertrophy, power).</p></li>
              </ul>
-             <p>This master-level program is designed to push your limits, so listen to your body and adjust as necessary. Aim for 4-6 workouts per week, with sufficient rest
+             <p style="color: rgba(255, 0, 0, 0.795);">This master-level program is designed to push your limits, so listen to your body and adjust as necessary. Aim for 4-6 workouts per week, with sufficient rest
                  and recovery to support optimal performance and progress.</p>
+                </div>
 </body>
 </html>
