--- a/Novice.html
+++ b/Novice.html
@@ -9,10 +9,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
+    <style>
+        div{
+            background-image: url(Novicebg.gif);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+        }
+        h1{
+            text-align: center;
+            font-size: 50px;
+        }
+        button{
+            position: absolute;
+            left: 1450px;
+            font-size: 30px;
+        }
+        .tips{
+            position:  absolute;
+            bottom: 300px;
+            left: 550px;
+            
+        }
+    </style>
 </head>
 <body>
-    <h2>Novice Home Workout Program</h2>
-    <p>It focuses on building a foundation of strength, endurance, and flexibility. Aim to do this routine 3 times a week, allowing rest days in between.</p>
+    <div>
+    <h1>Novice Home Workout Program</h1>
+    <p style="background-color: peachpuff; text-align: center;">It focuses on building a foundation of strength, endurance, and flexibility. Aim to do this routine 3 times a week, allowing rest days in between.</p>
     <a href="Programs.html">
         <button>Back</button>
         </a>
@@ -63,13 +87,15 @@
         <li>Child’s Pose - 1 minute</li>
         <li>Seated Hamstring Stretch - 1 minute each leg</li>
     </ol>
-    <h5>Tips:</h5>
+    <div class="tips">
+    <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
     <ul>
         <li><p>Form Over Reps: Focus on maintaining proper form to prevent injury.</p></li>
         <li><p>Progress Gradually: Increase reps, sets, or duration as you get more comfortable.</p></li>
         <li><p>Hydrate and Rest: Drink plenty of water and ensure adequate recovery time between workouts.</p></li>
     </ul>
-    <p>Feel free to modify the exercises based on your comfort level and gradually increase the intensity as you gain strength and confidence.</p>
-    <hr>
+    <p style="color: rgba(255, 0, 0, 0.795);">Feel free to modify the exercises based on your comfort level and gradually increase the intensity as you gain strength and confidence.</p>
+    </div>
+</div>
 </body>
 </html>
