--- a/Programs.html
+++ b/Programs.html
@@ -9,26 +9,54 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
+    <style>
+        body{
+            background-image: url(ProgramsBG.gif);
+            background-repeat: no-repeat;
+            background-size: cover;
+            
+        }
+        h1{
+            color: white;
+            font-size: 50px;
+            text-align: center;
+            position: relative;
+        }
+        ol{
+            color: white;
+        }
+        h3{
+            text-align: center;
+        }
+        h3:hover{
+            color: rgb(255, 50, 50);
+        }
+        button{
+            position: absolute;
+            left: 1450px;
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="text-align: center;">PROGRAMS</h1>
-    <h3 style="text-align: center;">Assess your abilities and categorize your skills according to your level of expertise, from novice to master,
+    <h1>PROGRAMS</h1>
+    <h3>Assess your abilities and categorize your skills according to your level of expertise, from novice to master,
         <br> to better understand your strengths and areas for growth.</h3>
     <hr>
     <a href="index.html">
         <button>Home</button>
         </a>
-    <h3>Levels of skills:</h3>
+    <h3 style="font-size: 30px;">Levels of skills:</h3>
     <ol>
-        <li><a href="Novice.html">Novice</a>: Just starting out; learning the basics and familiarizing oneself with fundamental concepts and techniques.</li>
+        <li><a href="Novice.html">Novice</a>: Just starting out; learning the basics and familiarizing oneself with fundamental concepts and techniques.</li> <br><br>
         <li><a href="Beginner.html">Beginner</a>: Gaining some experience; able to perform basic tasks with some degree of competence but may still struggle
-            <br> with more complex elements.</li>
+            <br> with more complex elements.</li> <br> <br>
         <li><a href="Intermediate.html">Intermediate</a>: More comfortable and proficient; can handle a range of tasks with some skill and problem-solving 
-            <br>abilities but may need more practice to refine techniques.</li>
+            <br>abilities but may need more practice to refine techniques.</li> <br> <br>
         <li><a href="Advanced.html">Advanced</a>: Highly skilled and capable; can tackle complex tasks with confidence and efficiency; often has a
-            <br> deeper understanding of the subject and can apply knowledge flexibly.</li>
+            <br> deeper understanding of the subject and can apply knowledge flexibly.</li> <br><br>
         <li><a href="Expert.html">Expert</a>: Mastery level; demonstrates exceptional skill and deep understanding; can innovate and solve
-            <br> complex problems with ease; often seen as a reference or authority in the field.</li>
+            <br> complex problems with ease; often seen as a reference or authority in the field.</li><br><br>
         <li><a href="Master.html">Master</a>: Often considered beyond expert; has profound expertise and a high level of creativity and insight;
             <br> may contribute to the development of new techniques or theories and have significant influence in the field.</li>
     </ol>        
