--- a/Advanced.html
+++ b/Advanced.html
@@ -9,10 +9,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
+    <style>
+        body{
+            background-image: url(AdvancedBG.gif);
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        h1{
+            text-align: center;
+            font-size: 50px;
+        }
+        button{
+            position: absolute;
+            left: 1450px;
+            font-size: 30px;
+        }
+        .tips{
+            position: absolute;
+            bottom: 150px;
+            left: 700px;
+            
+        }
+        
+    </style>
 </head>
 <body>
-    <h2>Advanced Home Workout Program</h2>
-        <P>This program incorporates high-intensity exercises and complex movements to challenge strength, endurance, and flexibility. It’s designed for 
+    <h1>Advanced Home Workout Program</h1>
+        <P style="background-color: peachpuff; text-align: center;">This program incorporates high-intensity exercises and complex movements to challenge strength, endurance, and flexibility. It’s designed for 
             those who have a solid foundation and are looking to push their limits.</P>
             <a href="Programs.html">
                 <button>Back</button>
@@ -105,15 +129,16 @@
                 <li>Child’s Pose - 1 minute</li>
                 <li>Spinal Twist - 1 minute per side</li>
             </ol>
-            <h5>Tips:</h5>
+            <div class="tips">
+            <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
             <ul>
                 <li><p>Intensity: Adjust weights and exercise difficulty to match your fitness level. Ensure you’re pushing yourself but not compromising form.</p></li>
                 <li><p>Form and Safety: Proper technique is crucial to prevent injury. Consider using a mirror or recording yourself to check form.</p></li>
                 <li><p>Progressive Overload: Gradually increase weights, reps, or sets as you become stronger.</p></li>
                 <li><p>Recovery: Allow at least one rest day between intense workouts to aid recovery. Incorporate light activities or stretching on rest days.</p></li>
             </ul>
-            <p>This program can be performed 4-5 times a week, with adequate rest and recovery. Adjust the volume or intensity as needed to suit your individual
+            <p style="color: rgba(255, 0, 0, 0.795);">This program can be performed 4-5 times a week, with adequate rest and recovery. Adjust the volume or intensity as needed to suit your individual
                  fitness goals and conditions.</p>
-<hr>
+</div>
 </body>
 </html>
