--- a/Beginner.html
+++ b/Beginner.html
@@ -9,10 +9,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
+    <style>
+        body{
+            background-image: url(BeginnerBG.gif);
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        h1{
+            text-align: center;
+            font-size: 50px;
+        }
+        ul{
+            color: white;
+        }
+        ol{
+            color: white;
+        }
+        button{
+            position: absolute;
+            left: 1450px;
+            font-size: 30px;
+        }
+        .tips{
+            position: absolute;
+            bottom: 200px;
+            left: 550px;
+            
+        }
+    </style>
 </head>
 <body>
-    <h2>Beginner Home Workout Program</h2>
-    <p>It’s designed to build strength, improve cardiovascular fitness, and enhance flexibility.</p>
+    <h1>Beginner Home Workout Program</h1>
+    <p style="background-color: pink; text-align: center;">It’s designed to build strength, improve cardiovascular fitness, and enhance flexibility.</p>
     <a href="Programs.html">
         <button>Back</button>
         </a>
@@ -62,15 +91,16 @@
         <li>Cat-Cow Stretch - 1 minut3</li>
         <li>Seated Hamstring Stretch - 1 minute each leg</li>
     </ol>
-    <h5>Tips:</h5>
+    <div class="tips">
+    <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
     <ul>
         <li><p>Focus on Form: Ensure proper form for each exercise to maximize benefits and prevent injury.</p></li>
         <li><p>Gradual Progression: Start with the recommended reps and sets, and gradually increase as you become morecomfortable and stronger.</p></li>
         <li><p>Stay Hydrated: Drink water before, during, and after your workout.</li>
         <li><p>Listen to Your Body: If you experience pain (not to be confused with muscle fatigue), stop and assess.</p></li>
     </ul>
-    <p>This program can be performed 2-3 times a week with rest days in between. Adjust the intensity based on your fitness level and progress as you build strength and 
+    <p style="color: rgba(255, 0, 0, 0.795);">This program can be performed 2-3 times a week with rest days in between. Adjust the intensity based on your fitness level and progress as you build strength and 
         endurance.</p>
-        <hr>
+        </div>
 </body>
 </html>
