--- a/Programs.html
+++ b/Programs.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
     <style>
+        
         body{
             background-image: url(ProgramsBG.gif);
             background-repeat: no-repeat;
@@ -32,13 +33,14 @@
             color: rgb(255, 50, 50);
         }
         button{
-            position: absolute;
+            float: right;
             left: 1450px;
             font-size: 30px;
         }
     </style>
 </head>
 <body>
+    <div class="container">
     <h1>PROGRAMS</h1>
     <h3>Assess your abilities and categorize your skills according to your level of expertise, from novice to master,
         <br> to better understand your strengths and areas for growth.</h3>
@@ -59,6 +61,7 @@
             <br> complex problems with ease; often seen as a reference or authority in the field.</li><br><br>
         <li><a href="Master.html">Master</a>: Often considered beyond expert; has profound expertise and a high level of creativity and insight;
             <br> may contribute to the development of new techniques or theories and have significant influence in the field.</li>
-    </ol>        
+    </ol>    
+</div>    
 </body>
 </html>
