--- a/Expert.html
+++ b/Expert.html
@@ -10,6 +10,25 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Logo.jpg">
     <style>
+        .container{
+            position: relative;
+            background-color: black;
+            z-index: 1;
+        }
+        .container::before{
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: url(ExpertBG.gif);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            opacity: 0.5;
+            z-index: -1;
+        }
         body{
             background-image: url(ExpertBG.gif);
             background-attachment: fixed;
@@ -28,19 +47,21 @@
             color: white;
         }
         button{
-            position: absolute;
+            float: right;
             left: 1450px;
             font-size: 30px;
         }
         .tips{
-            position: absolute;
-            bottom: 150px;
-            left: 700px;
-            
+            border: 1px solid peachpuff;
+            height: 450px;
+            width: 800px;
+            float: right;
+            margin-right: 20px;
         }
     </style>
 </head>
 <body>
+    <div class="container">
     <h1>Expert Home Workout Program</h1>
     <p style="background-color: gray; color: white; text-align: center;">An expert-level home workout program will focus on advanced strength, endurance, and agility training. It incorporates high-intensity intervals, complex 
         movements, and challenging exercises to push your limits. This program assumes you have a high level of fitness and experience with a variety of exercises. 
@@ -51,6 +72,20 @@
         <h3>Warm-Up (10-15 minutes)</h3>
         <ol>
             <li>Jump Rope - 2 minutes</li>
+
+            <div class="tips">
+                <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
+                <ul>
+                    <li><p>Intensity and Variation: Adjust weights, reps, and rest periods to match your individual fitness level and goals. Incorporate different variations to 
+                        continuously challenge yourself.</p></li>
+                    <li><p>Form and Technique: Prioritize proper form to prevent injury and maximize effectiveness.</p></li>
+                    <li><p>Progressive Overload: Gradually increase the intensity of your workouts by adding weight, reps, or sets as you progress.</p></li>
+                    <li><p>Recovery: Allow for adequate rest and recovery between workouts. Incorporate active recovery and flexibility work on off days.</p></li>
+                </ul>
+                <p style="color: rgba(255, 0, 0, 0.795);">This advanced program is designed to be intense and challenging, so listen to your body and make adjustments as needed. Aim to complete this routine 4-5 times a week,
+                   with at least one full rest day or light recovery activity.</p>
+                </div>
+
             <li>Burpees - 1 minute</li>
             <li>High Knees - 1 minute</li>
             <li>Dynamic Lunges - 1 minute</li>
@@ -136,18 +171,7 @@
             <li>Child’s Pose - 1 minute</li>
             <li>Cobra Stretch - 1 minute</li>
         </ol>
-        <div class="tips">
-        <h5 style="color: rgba(255, 0, 0, 0.795);">Tips:</h5>
-        <ul>
-            <li><p>Intensity and Variation: Adjust weights, reps, and rest periods to match your individual fitness level and goals. Incorporate different variations to 
-                continuously challenge yourself.</p></li>
-            <li><p>Form and Technique: Prioritize proper form to prevent injury and maximize effectiveness.</p></li>
-            <li><p>Progressive Overload: Gradually increase the intensity of your workouts by adding weight, reps, or sets as you progress.</p></li>
-            <li><p>Recovery: Allow for adequate rest and recovery between workouts. Incorporate active recovery and flexibility work on off days.</p></li>
-        </ul>
-        <p style="color: rgba(255, 0, 0, 0.795);">This advanced program is designed to be intense and challenging, so listen to your body and make adjustments as needed. Aim to complete this routine 4-5 times a week,
-           with at least one full rest day or light recovery activity.</p>
-        </div>
-
+        
+    </div>
 </body>
 </html>
