--- a/Advanced.html
+++ b/Advanced.html
@@ -44,6 +44,7 @@
             float: right;
             left: 1450px;
             font-size: 30px;
+            margin-right: 20px;
         }
         .tips{
             border: 1px solid peachpuff;
