--- a/Novice.html
+++ b/Novice.html
@@ -51,6 +51,7 @@
             left: 1450px;
             font-size: 30px;
             float: right;
+            margin-right: 20px;
         }
         .tips{
             border: 1px solid peachpuff;
