--- a/Intermediate.html
+++ b/Intermediate.html
@@ -51,6 +51,7 @@
             float: right;
             left: 1450px;
             font-size: 30px;
+            margin-right: 20px;
         }
         .tips{
             border: 1px solid peachpuff;
