--- a/Programs.html
+++ b/Programs.html
@@ -36,6 +36,7 @@
             float: right;
             left: 1450px;
             font-size: 30px;
+            margin-right: 20px;
         }
     </style>
 </head>
